--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:name=".MainApplication"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -55,7 +56,9 @@
             android:name=".ui.CameraActivity"
             android:screenOrientation="portrait" />
 
-        <receiver android:name=".location.LocationUpdatesBroadcastReceiver" />
+        <receiver
+            android:name=".location.LocationUpdatesBroadcastReceiver"
+            android:exported="false" />
 
         <service
             android:name=".messaging.MyFirebaseMessagingService"
