--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ lifecycleViewmodelKtx = "2.8.7"
 media3Ui = "1.4.1"
 navigationFragmentKtx = "2.8.3"
 navigationUiKtx = "2.8.3"
-playServices = "12.0.1"
+playServicesGcm = "17.0.0"
 playServicesMaps = "19.0.0"
 preference = "1.2.1"
 retrofit = "2.11.0"
@@ -69,6 +69,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+play-services-gcm = { module = "com.google.android.gms:play-services-gcm", version.ref = "playServicesGcm" }
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 systemuihelper = { module = "me.zhanghai.android.systemuihelper:library", version.ref = "library" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
